plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    alias libs.plugins.modDevGradle
    alias libs.plugins.lombok
    alias libs.plugins.machete
    id 'org.jreleaser' version '1.23.0'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

String buildType = 'snapshot'
String buildNumber
if (System.getenv("CI_BUILD") == 'false') buildNumber = null
else {
    if (System.getenv("PR_BUILD") != 'false') buildType = 'pr'
    buildNumber = System.getenv("GITHUB_RUN_NUMBER")
}
version = "${mod_version}" + (buildNumber != null ? "+${buildType}.${buildNumber}" : "")
group = mod_group_id

base {
    archivesName = "${project.mod_id}-neoforge-${libs.versions.minecraft.get()}"
}

repositories {
    maven { url = "https://server.cjsah.net:1002/maven/" }
    mavenLocal()
    mavenCentral()
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = libs.versions.neoForge.get()

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    interfaceInjectionData {
        // from 'src/main/resources/interface_injections.json'
        // publish file('src/main/resources/interface_injections.json')
    }

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


dependencies {

    if (System.getenv("NOT_DEV") == 'true') {
        jarJar(api("dev.anvilcraft.lib:anvillib-config-neoforge-1.21.1:latest.release"))
    } else {
        jarJar(implementation project(":anvillib-config-neoforge-1.21.1"))
    }
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version      : libs.versions.minecraft.get(),
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : libs.versions.neoForge.get(),
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.register('sourcesJar', Jar) {
    from delombok.outputs.files
    dependsOn delombok
    archiveClassifier = "sources"
}

tasks.register('javadocJar', Jar) {
    from javadoc.destinationDir
    dependsOn javadoc
    archiveClassifier = "javadoc"
}

javadoc {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
}

jar {
    from(rootProject.file("LICENSE"))
    from(rootProject.file("ASSETS_LICENSE"))
    from(rootProject.file("README.md"))
    from(rootProject.file("README.en.md"))
}

artifacts {
    archives tasks.jar
    archives tasks.sourcesJar
    archives tasks.javadocJar
}

def this_name = base.archivesName.get()
def this_description = mod_description

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java

            artifact sourcesJar
            artifact javadocJar

            versionMapping {
                allVariants {
                    fromResolutionResult()
                }
            }

            pom {
                name = this_name
                description = this_description
                url = 'https://github.com/Anvil-Dev/AnvilLib'

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/license/mit'
                    }
                }
                developers {
                    developer {
                        id = 'Anvil-Dev'
                        name = 'AnvilCraft Dev'
                        email = 'admin@anvilcraft.dev'
                    }
                }
                scm {
                    url = 'https://github.com/Anvil-Dev/AnvilLib'
                    connection = 'https://github.com/Anvil-Dev/AnvilLib.git'
                    developerConnection = 'https://github.com/Anvil-Dev/AnvilLib.git'
                }
            }
        }
    }
    repositories {
        // Add repositories to publish to here.
        def MAVEN_URL = System.getenv("MAVEN_URL")
        if (MAVEN_URL != null) {
            maven {
                url MAVEN_URL
                credentials {
                    username System.getenv("MAVEN_USERNAME")
                    password System.getenv("MAVEN_PASSWORD")
                }
            }
        }
        mavenLocal()
        maven {
            name = "staging"
            url = layout.buildDirectory.dir("staging-deploy")
        }
    }
}

jreleaser {
    signing {
        active = 'ALWAYS'
        armored = true
    }

    deploy {
        maven {
            mavenCentral {
                sonatype {
                    active = 'ALWAYS'
                    url = 'https://central.sonatype.com/api/v1/publisher'
                    stagingRepository('build/staging-deploy')
                }
            }
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

machete {
    // disable machete locally for faster builds
    enabled = false
}

lombok {
    version = "1.18.34"
}
